# ios-vfs-extractor

./: CMakeLists.txt  README.md
config/: init-mac.sh
src/: extractor.cpp  extractor.hpp  main.cpp
